# threema-android

./: .editorconfig  .gitattributes  .gitignore  1.patch  1b.patch  CONTRIBUTING.md  README.md  SECURITY.md  THANKS.md  binv1_2.patch  build.gradle  build.gradle.kts  contributors.csv  dependencyCheckSuppressions.xml  gradle.properties  gradlew  local.properties  settings.gradle  settings.gradle.kts  stability_config.conf  strings.patch  v1.patch
.github/: pull_request_template.md
app/: build.gradle  build.gradle.kts  compile-proto.sh  multidex-keep.pro  proguard-project.txt
app/assets/: .~lock.license.html#  license.html
app/assets/passwords/: bad_passwords.txt
app/jni/: Android.mk  Application.mk  poly1305-jni.c
app/jni/nacl/: curve25519-jni.c  salsa20-jni.c  smult_donna-c64.c  smult_donna.c
app/libs/: agconnect-core-1.5.0.300.aar  agconnect-core-1.9.1.301.aar
app/libs/armeabi-v7a/: README.txt
app/libs/x86/: README.txt
app/protobuf/: extra.proto  key-storage.proto
buildSrc/: build.gradle.kts  settings.gradle.kts
common/: build.gradle.kts
commonAndroid/: build.gradle.kts
domain/: build.gradle  build.gradle.kts  compile-proto.sh
domain/libthreema/: .gitignore  Cargo.toml  deny.toml  rust-toolchain.toml
domain/libthreema/binding-tests/wasm/: crypto.test.js  utils.js
domain/libthreema/lib/: Cargo.toml  build.rs  uniffi.toml
domain/libthreema/lib/examples/: csp.rs  d2d_rendezvous.rs
domain/libthreema/lib/resources/test/on-prem/: full.oppf  minimal.oppf
domain/libthreema/lib/src/: common.rs  crypto.rs  https.rs  lib.rs  sync.rs  time.rs
domain/libthreema/lib/src/bindings/: mod.rs
domain/libthreema/lib/src/bindings/uniffi/: crypto.rs  d2d_rendezvous.rs  https.rs  id_backup.rs  logging.rs  mod.rs  remote_secret.rs  work_properties.rs
domain/libthreema/lib/src/bindings/wasm/: crypto.rs  d2d_rendezvous.rs  https.rs  logging.rs  mod.rs  remote_secret.rs  work_properties.rs
domain/libthreema/lib/src/cli/: mod.rs
domain/libthreema/lib/src/common/: config.rs  keys.rs  mod.rs  task.rs
domain/libthreema/lib/src/crypto/: chunked.rs  mod.rs
domain/libthreema/lib/src/csp/: cipher.rs  frame.rs  handshake_messages.rs  mod.rs  payload.rs
domain/libthreema/lib/src/csp/payload/: handshake.rs  mod.rs  post_handshake.rs
domain/libthreema/lib/src/csp_e2e/: config.rs  message.rs  mod.rs  provider.rs  reflect.rs  transaction.rs
domain/libthreema/lib/src/csp_e2e/contact/: create.rs  lookup.rs  mod.rs  predefined.rs  update.rs
domain/libthreema/lib/src/csp_e2e/contacts/: codec.rs  create.rs  lookup.rs  mod.rs  update.rs
domain/libthreema/lib/src/csp_e2e/endpoints/: directory.rs  mod.rs  work_directory.rs
domain/libthreema/lib/src/csp_e2e/identity/: create.rs  mod.rs
domain/libthreema/lib/src/csp_e2e/incoming_message/: mod.rs  payload.rs  task.rs
domain/libthreema/lib/src/csp_e2e/message/: codec.rs  mod.rs  payload.rs
domain/libthreema/lib/src/csp_e2e/message/task/: incoming.rs  mod.rs  outgoing.rs
domain/libthreema/lib/src/csp_e2e/transaction/: begin.rs  commit.rs  mod.rs
domain/libthreema/lib/src/d2d_rendezvous/: frame.rs  mod.rs  rxdak.rs  rxdtk.rs  rxdxk.rs
domain/libthreema/lib/src/d2m/: mod.rs
domain/libthreema/lib/src/d2m/payload/: handshake.rs  mod.rs  post_handshake.rs
domain/libthreema/lib/src/https/: directory.rs  endpoint.rs  mod.rs  work_directory.rs
domain/libthreema/lib/src/id_backup/: argon_chacha_poly_scheme.rs  legacy_scheme.rs  mod.rs
domain/libthreema/lib/src/model/: contact.rs  message.rs  mod.rs  provider.rs
domain/libthreema/lib/src/remote_secret/: mod.rs  monitor.rs
domain/libthreema/lib/src/remote_secret/setup/: create.rs  delete.rs  mod.rs
domain/libthreema/lib/src/utils/: apply.rs  cache.rs  debug.rs  frame.rs  logging.rs  mod.rs  number.rs  protobuf.rs  sequence_numbers.rs  serde.rs  sync.rs  time.rs
domain/libthreema/lib/src/utils/bytes/: mod.rs  reader.rs  writer.rs
domain/libthreema/lib/src/work/: mod.rs  properties.rs
domain/libthreema/macros/: Cargo.toml
domain/libthreema/macros/src/: lib.rs
domain/libthreema/macros/tests/: concat_bytes.rs  constant_time_eq.rs
domain/libthreema/macros/tests/fail/: 01-incorrect-length.rs  01-incorrect-length.stderr  02-not-u8.rs  02-not-u8.stderr
domain/libthreema/patches/blake2/: CHANGELOG.md  Cargo.toml  README.md
domain/libthreema/patches/blake2/src/: as_bytes.rs  macros.rs
domain/libthreema/patches/blake2/tests/: persona.rs
domain/libthreema/patches/tsify/: Cargo.toml  LICENSE_MIT  README.md  test.sh
domain/libthreema/patches/tsify/src/: lib.rs
domain/libthreema/patches/tsify/tests/: enum.rs  expandtest.rs  flatten.rs  generics.rs  optional.rs  rename.rs  skip.rs  struct.rs  transparent.rs  type_override.rs  wasm.rs
domain/libthreema/patches/tsify/tests/expand/: borrow.expanded.rs  borrow.rs  generic_enum.expanded.rs  generic_enum.rs  generic_struct.expanded.rs  generic_struct.rs  type_alias.expanded.rs  type_alias.rs
domain/libthreema/patches/tsify/tsify-macros/: Cargo.toml
domain/libthreema/patches/tsify/tsify-macros/src/: attrs.rs  container.rs  ctxt.rs  decl.rs  derive.rs  lib.rs  parser.rs  type_alias.rs  typescript.rs  wasm_bindgen.rs
domain/libthreema/threema-protocols/: .gitignore
domain/libthreema/threema-protocols/src/: common.proto  cross-platform-backup.md  cross-platform-backup.proto  cross-platform-backup.struct.yml  csp-e2e-fs.proto  csp-e2e.proto  csp.struct.yml  directory.openapi.yml  directory.proto  group-call.proto  group-call.struct.yml  md-d2d-history.proto  md-d2d-join.proto  md-d2d-rendezvous.proto  md-d2d-sync.proto  md-d2d.proto  md-d2m.proto  md-d2m.struct.yml  md.md  o2o-call.proto  oppf.schema.yml  url-payloads.proto
domain/libthreema/tools/: build-uniffi.sh  build-wasm.sh
domain/libthreema/tools/uniffi-bindgen/: Cargo.toml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lint-rules/: build.gradle.kts
scripts/: Dockerfile  build-release.sh  generate-protobuf.sh  rustup-init.sh  verify-build.sh
task-manager/: build.gradle
test-helpers/: build.gradle.kts
(+5705 files in other folders)
