[package]
name = "libthreema-macros"
version = "0.1.0"
authors = ["Threema GmbH"]
license = "AGPL-3.0-only"
edition = "2024"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
convert_case = "0.9"
quote = "1"
subtle = { version = "2", features = ["const-generics"] }
syn = { version = "2", features = ["full"] }

[dev-dependencies]
rstest = "0.26"
trybuild = "1"
