[package]
name = "tsify"
version = "0.4.5"
edition = "2021"
authors = ["Madono Haru <madonoharu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tsify is a library for generating TypeScript definitions from rust code."
repository = "https://github.com/madonoharu/tsify"
homepage = "https://github.com/madonoharu/tsify"
keywords = ["wasm", "wasm-bindgen", "typescript"]
categories = ["wasm"]

[dependencies]
tsify-macros = { path = "tsify-macros", version = "0.4.3" }
wasm-bindgen = { version = "0.2.86", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde-wasm-bindgen = { version = "0.5.0", optional = true }
gloo-utils = { version = "0.1.6", optional = true }

[dev-dependencies]
indoc = "2.0.1"
js-sys = "0.3.63"
macrotest = "1.0"
pretty_assertions = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0"
wasm-bindgen = "0.2.86"
wasm-bindgen-test = "0.3.36"

[features]
default = ["json"]
wasm-bindgen = ["tsify-macros/wasm-bindgen", "dep:wasm-bindgen"]
js = ["wasm-bindgen", "tsify-macros/js", "dep:serde", "dep:serde-wasm-bindgen"]
json = [
  "wasm-bindgen",
  "tsify-macros/json",
  "dep:serde",
  "dep:gloo-utils",
  "dep:serde_json",
]
