[package]
name = "tsify-macros"
version = "0.4.5"
edition = "2021"
authors = ["Madono Haru <madonoharu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Macros for tsify"
repository = "https://github.com/madonoharu/tsify"
homepage = "https://github.com/madonoharu/tsify"
keywords = ["wasm", "wasm-bindgen", "typescript"]
categories = ["wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing", "proc-macro"] }
serde_derive_internals = "0.28"

[features]
wasm-bindgen = []
js = []
json = []
